# smolvec

./: Cargo.toml  README.md
benches/: smolvec_bench.rs
src/: lib.rs
