[package]
name = "smolvec"
version = "1.0.0"
edition = "2021"
description = "A lightweight vector implementation with small-vector optimization for rust."
license = "MIT"
repository = "https://github.com/simplysabir/smolvec"
keywords = ["vector", "data-structure", "optimization"]
categories = ["data-structures"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "smolvec_bench"
harness = false
